Add Outbox message handling enhancements: introduce XML mapper for OutboxMessage, implement locking and status update methods in OutboxMessageMapper, and update OutboxMessageRepository to utilize new mapper methods for improved message processing.